# CarDatabase_Hp

./: CarDatabase_Hp.sln  Projekt_BazaDanych_Autor_HubertPałka.docx  README.md
MFCApplication2/: CMakeLists.txt  CarDatabase_HP.cpp  CarDatabase_HP.h  CarDatabase_HP.rc  CarDatabase_HPDlg.cpp  CarDatabase_HPDlg.h  MFCApplication2.vcxproj  MFCApplication2.vcxproj.filters  cars.txt  resource.h  tests.cpp
MFCApplication2/res/: CarDatabase_HP.rc2
